--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ optuna>=3.6.0
 # Visualization (matplotlib used in batch visuals)
 matplotlib>=3.7.0
 scikit-learn>=1.3.0
+sentence-transformers>=2.2.0
+implicit>=0.7.0
