Enable DB-driven feature enrichment and refresh documentation

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ weeks_year = 52
 
 [similarity]
 # Top-K neighbors to compute per account
-k_neighbors   = 25
+k_neighbors   = 15
 # Blocks to include
 use_text      = true
 use_als       = true   # enable ALS by default (built from Azure SQL profit rollup)
@@ -25,6 +25,13 @@ w_numeric     = 0.50
 w_categorical = 0.15
 w_text        = 0.25
 w_als         = 0.10
+# Neighbor search memory controls
+# If number of accounts exceeds this threshold, switch to blockwise top-K
+# to avoid allocating a dense NxN similarity matrix in memory.
+max_dense_accounts = 5000
+# Number of query rows per block to use when in blockwise mode.
+# Lower values reduce peak memory; higher values run faster.
+row_block_size = 512
 # Numeric transforms
 winsor_pct    = 0.01
 log1p_cols    = [
@@ -52,3 +59,7 @@ w_assets = 0.2      # asset_count
 w_active = 0.1      # active_assets
 w_recency = 0.3     # multiplicative boost from recency_weight
 recency_half_life_days = 180
+alpha = 40.0        # implicit ALS alpha multiplier for confidence
+reg = 0.05          # implicit ALS regularization (stability)
+iterations = 20     # implicit ALS iterations
+use_bm25 = true     # prefer BM25 over TF-IDF weighting
