--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ matplotlib>=3.7.0
 scikit-learn>=1.3.0
 sentence-transformers>=2.2.0
 implicit>=0.7.0
+
+# Validation
+pandera>=0.18.0
+
+# Dev Tools
+ruff>=0.1.0
+mypy>=1.0.0
